[package]
name = "ss-csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ss_csv"
path = "src/lib.rs"

[[bin]]
name = "ss_csv_bin"
path = "src/bin.rs"

[[bench]]
name = "bufchrbench"
harness = false
path = "benches/bench.rs"

[dependencies]
bytecount = "0.6.2"
jetscii = "0.5.0"
bufchr = { git = "https://github.com/yiunsr/bufchr.git", tag="v0.3" }
encoding_rs = "0.8.26"
unicode-bom = "1.1.4"
chardetng = "0.1.10"
log = "0.4"

[dev-dependencies]
bencher = "0.1.5"
csv-core = "0.1.6"


[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3